--- a/app/views/book/admin_menu.erb
+++ b/app/views/book/admin_menu.erb
@@ -244,8 +244,8 @@
             <center><p id = "menu_font" style = "font-size:20px;"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>&nbsp;승인완료 예약 리스트</p>
           <% Reservation.where(state: "승인완료").each do |c| %>
               <tr>
-               
-                <td id = "menu_font_t"><%=User.find(c.user).email %></td>
+                <td><%=c.id%></td>
+                <td><%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)</td>
                 <td id = "menu_font_t"><%=c.date%></td>
                 <td id = "menu_font_t"><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
                 
@@ -253,20 +253,21 @@
                   <% if current_user %> <!--로그인 된 상태.-->
                           
                     <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
-                      <span id = "menu_font_t" class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
                       
-                 <% if c.state=="승인대기" %>
-                        <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" >승인하기</button>
+                      <% if c.state=="승인대기" %>
+                        <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
+                        <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span> </td>
+                        <td><button type="button" class="btn btn-success btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button></td>
+                        
+                        
                       <% else %>
-                        <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
+                        <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
+                        <td><span class="label label-primary" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span></td>
+                        <td><button type="button" class="btn btn-danger btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button></td>
+                      <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
+                        
                       <%end%>
-                                    
-                    <% else %> <!--관리자가 아닐때 승인대기-->
-                      <span id = "menu_font_t" class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
-                      <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
-                                
-               <% end %>
-                                     
+                    <%end%>                 
                   <% end %> <!-- if current_user end -->
                         
     
@@ -401,3 +402,74 @@
 </div>
 
 <br><br><br><br><br><br>
+
+<% Reservation.all.each do |c| %><!--예약취소 모달-->
+
+<div id="show_check<%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">예약 취소</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">예약을 취소하시겠습니까?</label>
+        </div>
+      <div class="modal-footer">
+            <form action="/book/delete/<%=c.id%>" method="POST">
+              <button type="submit" class="btn btn-danger">취소하기</button>
+            </form>
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+      
+          
+<div id="show<%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"><!--예약상세보기-->
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel"> 예약 상세 보기</h4>
+      </div>
+      <div class="modal-body">
+        
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">사용자</label>
+          <%=User.find(c.user).student_name%> (<%=User.find(c.user).student_number%>)
+        </div>
+        
+        
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">사용시간</label>
+          <%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%>
+        </div>
+        
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">사용목적</label>
+          <%=c.purpose%>
+        </div>
+        
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">담당 교수</label>
+          <%=c.professor%>            
+        </div>
+      </div>
+      
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <% if current_user.email == "admin@ptu.ac.kr" %>
+        <button type="button" class="btn btn-primary" id = "ok" >승인하기</button>
+      <% end %>  
+
+      </div>
+    </div>
+  </div>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<%end%>
