--- a/app/views/book/tip.erb
+++ b/app/views/book/tip.erb
@@ -1,8 +1,6 @@
 
 <div class="well" id="menu_font" style="font-size: 20px;" >
-  <center>
-  <p> 만든 사람들 입니다. </p>
-  </center>
+  <center>Made By Tip+_one</center>
 </div>
 
 <div class = "container">
