--- a/app/views/message/read.erb
+++ b/app/views/message/read.erb
@@ -23,11 +23,10 @@
   </div>
   
   <div id="menu_font" style="font-size: 20px;">내용 :</div>
-  <div id="menu_font_t" style="font-size: 18px;"><%=@message.content%><br><br><br>
-  </div>
-  
-  <center><a href="/message/main" class="btn btn-primary btn-sm" style="text-align: center; font-size: 18px;" id="menu_font">메인으로 가기</a>
-          <a href="/message/write" class="btn btn-primary btn-sm" style="text-align: center; font-size: 18px;" id="menu_font">답장보내기</a></center>
+  <pre id="menu_font_t" style="font-size: 18px;"><%=@message.content%></pre><br>
+    
+  <a href="/message/main" class="btn btn-primary btn-sm" style="font-size: 18px;" id="menu_font">메인으로 가기</a>
+  <a href="/message/write" class="btn btn-primary btn-sm" style="font-size: 18px;" id="menu_font">답장보내기</a>
   
 </div>
 
@@ -35,4 +34,4 @@
 
 </div></div>
 
-<br><br><br><br><br><br><br>
+<br><br><br><br>
