--- a/app/views/book/booking.erb
+++ b/app/views/book/booking.erb
@@ -9,7 +9,8 @@
 <div class="container">
 <div class="row">
 
-<center>
+<div class="col-md-2"></div>
+<div class="col-md-8">
   <form class="form-horizontal" action="/book/booking_process/<%=@class.id%>" method="POST">
      <!--<fieldset>-->
        <div class="form-group">
@@ -68,7 +69,7 @@
             [4]
             <br><br>
             
-          </div><br><br><br><br>
+          </div><br><br>
            <input type="checkbox" style="font-size: 20px;" id = "menu_font" required> 동의합니다.<br><br>
       </div>
       
@@ -114,10 +115,11 @@
 <!--만약 현재예약되어있는 시간이랑 사용자가 기입한 사용시간이 같으면 경고가 뜨고 다시 폼양식으로 redirect 한다.<br>-->
 <!--예약 완료시 예약완료ㅇ되었다는 alert뜸-->
 <!--</p>-->
-
+</div>
+<div class="col-md-2"></div>
 
 </div>
 </div>
 
-<br><br><br><br><br><br><br> 
+<br><br><br>
 
