--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -1,9 +1,8 @@
 <div class="well" id="menu_font" style="font-size: 20px;" >
   <center><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일<br><%=@class.building_name%> '<%=@class.room_number%>호'에 대한 예약현황입니다.
-  <br><br><a href="/book/booking?id=<%=@class.id%>&date=<%=@date%>" class="btn btn-warning" id="menu_font" style="font-size: 20px;">예약하기</a></center>
+  <br><a href="/book/booking?id=<%=@class.id%>&date=<%=@date%>" class="btn btn-warning" id="menu_font" style="font-size: 20px;">예약하기</a></center>
 </div>
 <br>
-
 
 <div class="containter"> 
 <div class="row">
@@ -90,7 +89,7 @@
             <td><%=c.id%></td>
             <td><%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)</td>
             <td><%=c.date%></td>
-            <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
+            <td><%=c.start_time.utc.to_s(:time)%> ~ <%=c.finish_time.utc.to_s(:time)%></td>
             <td><span class="label label-info" id="view_state<%=c.id%>" value="<%=c.state%>"><%=c.state%></span>    <!--현재 진행상태 보여줌--></td>
             
             <td>
@@ -101,14 +100,14 @@
                   <% if c.state=="승인대기" %>
                     <!--<input onclick="change(<=c.id%>)" type="button" value="승인하기" id="button<=c.id%>"></input>-->
                     <div id = "menu_font">
-                    <button type="button" class="btn btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button>
+                    <button type="button" class="btn btn-success btn btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button>
                     </div>
                     
                   <% else %>
                     <!--<input onclick="change(%=c.id%>)" type="button" value="승인취소" id="button%=c.id%>"></input>-->
 
                     <div id = "menu_font">
-                      <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button>
+                      <button type="button" class="btn btn-danger btn-primary" id="button<%=c.id%>" onclick="change(<%=c.id%>)">승인취소</button>
                     </div>
 
                   <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
@@ -124,6 +123,7 @@
   function change(reservation_id){
         
         var button="button" + reservation_id;
+        var button1="button1" + reservation_id;
         var view_state="view_state" + reservation_id;
         var re_state=document.getElementById(view_state).innerHTML;
         
@@ -139,6 +139,11 @@
               // alert("db 저장 완료");
               document.getElementById(view_state).innerHTML="승인완료";
               document.getElementById(button).innerHTML="승인취소";
+              document.getElementById(button1).innerHTML="승인취소";
+              
+              document.getElementById(view_state).className="label label-primary";
+              document.getElementById(button).className="btn btn-danger btn-primary";
+              document.getElementById(button1).className="btn btn-danger btn-primary";
             },
             error:function(request,status,error){
             alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
@@ -157,6 +162,11 @@
               // alert("db 저장 완료");
               document.getElementById(view_state).innerHTML="승인대기";
               document.getElementById(button).innerHTML="승인하기";
+              document.getElementById(button1).innerHTML="승인하기";
+              
+              document.getElementById(view_state).className="label label-info";
+              document.getElementById(button).className="btn btn-success btn-primary";
+              document.getElementById(button1).className="btn btn-success btn-primary";
             },
             error:function(request,status,error){
             alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
@@ -175,7 +185,7 @@
             <td>
             <% if current_user %>
                        <% if User.find(c.user).email == current_user.email %>
-                        <button class="btn btn-danger btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" 
+                        <button class="btn btn-danger btn-primary" data-toggle="modal" data-target="#show_check<%=c.id%>" 
                         style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
                        <% else %>
                          
@@ -230,13 +240,17 @@
         
         <div class="form-group">
           <label for="recipient-name" class="control-label">사용자</label>
-          <%=c.user%>
+          <%=User.find(c.user).student_name %> (<%=User.find(c.user).student_number %>)
         </div>
         
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">사용날짜</label>
+          <%=c.date%>
+        </div>
         
         <div class="form-group">
           <label for="recipient-name" class="control-label">사용시간</label>
-          <%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%>
+          <%=c.start_time.utc.to_s(:time)%> ~ <%=c.finish_time.utc.to_s(:time)%>
         </div>
         
         <div class="form-group">
@@ -254,13 +268,14 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       <% if current_user.email == "admin@ptu.ac.kr" %>
-        <button type="button" class="btn btn-primary" id = "ok" >승인하기</button>
+        <button type="button" class="btn btn-success btn-primary" id="button1<%=c.id%>" onclick="change(<%=c.id%>)">승인하기</button>
       <% end %>  
 
       </div>
     </div>
   </div>
 </div>
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <%end%>
 
