--- a/app/views/freeboard/delete.erb
+++ b/app/views/freeboard/delete.erb
@@ -1,5 +1,5 @@
 <div class="well" id="menu_font" style="font-size: 20px;" >
-  <center>관리자는 게시글 작성 시 입력한 비밀번호를 입력한 후 아래의 삭제하기 버튼을 눌러 삭제하세요.<br>
+  <center>관리자는 로그인 시에 입력한 비밀번호를 입력한 후 아래의 삭제하기 버튼을 눌러 삭제하세요.<br>
 </div>
 <br>
 
