--- a/app/views/freeboard/freeboards.erb
+++ b/app/views/freeboard/freeboards.erb
@@ -85,7 +85,8 @@
                         <td  style="text-align :center; font-size: 18px;" id="menu_font_t"> <p style = "color:black">  (<%= a.replies.count %>) </p> </td>
 
                     <% else %>    
-                        <td  style="text-align :center; font-size: 18px;" id="menu_font_t"><a href="/users/sign_in"><%= a.fb_title %>(<%= a.replies.count %>)</a></td>
+                        <td  style="text-align :center; font-size: 18px;" id="menu_font_t"><a href="/users/sign_in"><%= a.fb_title %></p></a> </td>
+                        <td  style="text-align :center; font-size: 18px;" id="menu_font_t"> <p style = "color:black">  (<%= a.replies.count %>) </p> </td>
                     <% end %>
                         <td  style="text-align :center; font-size: 18px;" id="menu_font_t"><%=a.created_at.in_time_zone("Seoul")%></td>
                 </tr>
@@ -162,6 +163,6 @@
 </div>
 </div>
 	
-	<br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br>
 </body>
 </html>
