--- a/app/views/freeboard/upload_view.erb
+++ b/app/views/freeboard/upload_view.erb
@@ -16,7 +16,7 @@
 <br>
 
     <div class="container">
-    <div class="row">
+   <div class="row">
      
         <center>   
             <div style="text-align: center; font-size: 20px;" id="menu_font"> 제목 </div>
@@ -24,12 +24,12 @@
                <br><%= @one_fb.fb_title %><br><br>
             </div><br><br> 
                 
-           <div style="text-align: center; font-size: 20px;" id="menu_font"> 내용 </div>
-            <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); align:center; width: 700px; font-size: 18px;" id="menu_font_t">
-               <br><%= @one_fb.fb_content %><br><br>
-            </div><br><br>
-            
-            
+          <div style="font-size: 20px;" id="menu_font"> 내용 </div>
+             <pre style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); width: 700px; font-size: 18px;" id="menu_font_t">
+              <br><%= @one_fb.fb_content %><br><br> 
+            </pre><br><br>
+     
+    
             <% if current_user.email == 'admin@ptu.ac.kr' %>
                 <a href="/freeboard/delete?id=<%= @one_fb.id %>"><input type="submit" class="btn btn-primary btn-sm btn pull-right" style=" font-size: 18px;" id="menu_font" value="삭제하기"></a>
                 &nbsp;&nbsp;&nbsp;&nbsp;
@@ -83,5 +83,5 @@
 
 	<br><br><br><br><br>
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
-</div>
+</div> 
 </div>
