--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -187,6 +187,11 @@
                        <% if User.find(c.user).email == current_user.email %>
                         <button class="btn btn-danger btn-primary" data-toggle="modal" data-target="#show_check<%=c.id%>" 
                         style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
+                        
+                       <% elsif current_user.email == "admin@ptu.ac.kr" %>
+                        <button class="btn btn-danger btn-primary" data-toggle="modal" data-target="#show_check<%=c.id%>" 
+                        style="text-align: center; font-size: 16px;" id="menu_font">예약취소</button>
+                        
                        <% else %>
                          
                        <%end%>
